tests/ui/issues/issue-19521.stderr
error[E0599]: no method named `homura` found for reference `&'static str` in the current scope
  --> $DIR/issue-19521.rs:2:8
   |
LL |     "".homura()();
   |        ^^^^^^ method not found in `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
